add back the structured dataset to dar lines